objects/mcdm_15__SubmissionSendSettings__c.object
<CustomObject>
    <description>The Send Settings for a given Sendable Record related to a set of Submission records.</description>
    <fields>
        <fullName>mcdm_15__CustomDataJson__c</fullName>
        <defaultValue>&quot;{}&quot;</defaultValue>
        <label>Custom Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mcdm_15__ExternalJourneyId__c</fullName>
        <label>External Journey Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Greeting__c</fullName>
        <label>Greeting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__LinkedBusinessUnitId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked Business Unit Id</label>
        <referenceTo>mcdm_15__LinkedBusinessUnit__c</referenceTo>
        <relationshipLabel>SubmissionSendSettings</relationshipLabel>
        <relationshipName>SubmissionSendSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mcdm_15__MobileCustomField__c</fullName>
        <label>Mobile Custom Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__RelatedRecordId__c</fullName>
        <label>Related Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__RelatedRecordType__c</fullName>
        <label>Related Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__SendFrom__c</fullName>
        <label>Send From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__SendableRecordId__c</fullName>
        <label>Sendable Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__SendableRecordType__c</fullName>
        <label>Sendable Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__SmsValue__c</fullName>
        <label>SMS Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MCDM Submission Send Settings</label>
    <nameField>
        <displayFormat>DMSSS-{000000}</displayFormat>
        <label>MCDM Submission Send Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MCDM Submission Send Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>